test/errors/compiler_print_invalid_char.ms
print -
// Compiler Error: got EOL where number, string, or identifier is required
